casi terminados falta 11 y hacer la entrega

--- a/ej3/index.html
+++ b/ej3/index.html
@@ -12,12 +12,12 @@
     <p class="clase2">Párrafo 2</p>
     <p class="clase3">Párrafo 3</p>
     <p class="clase4">Párrafo 4</p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p class="clase5">Párrafo 5</p>
+    <p class="clase6">Párrafo 6</p>
+    <p class="clase7">Párrafo 7</p>
+    <p class="clase8">Párrafo 8</p>
+    <p class="clase9">Párrafo 9</p>
+    <p class="clase10">Párrafo 10</p>
     
 </body>
 </html>
